--- a/intelligentwasteseprator.kv
+++ b/intelligentwasteseprator.kv
@@ -1,26 +1,19 @@
 <MyGrid>
     my_widget: my_widget
-    filechooser: filechooser
-    image: image
+    camera: camera
 
     GridLayout:
         id: my_widget
         cols: 1
         size: root.width, root.height
-        
-        GridLayout:
-            cols: 2
-            Image:
-                id: image
-                source: ""
-        
-            Button:
-                text: "Start"
-                font_size: 40
-                on_press: root.btn(filechooser.selection)
-
-        FileChooserIconView:
-            id: filechooser
-            on_selection: root.selectedImage(filechooser.selection)
+        Camera:
+            id: camera
+            resolution: (640, 480)
+            play: True
+        Button:
+            text: 'Capture'
+            size_hint_y: None
+            height: '48dp'
+            on_press: root.capture()
 
 	
